# kite-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  auto_login.py  kite_server.py  promotion-activities.md  pyproject.toml  smithery.yaml  social-preview.html
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/kite_mcp/: __init__.py  auth.py  cli.py  server.py
tests/: test_auth.py  test_cli.py  test_server.py
