[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kite-mcp"
version = "0.1.2"
description = "MCP server for Zerodha Kite — trade Indian stocks via any MCP-compatible AI assistant"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Amit Ranjan", email = "mail2amit.ranjan@gmail.com" },
]
keywords = ["mcp", "zerodha", "kite", "trading", "stocks", "india"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "mcp>=1.0.0",
    "kiteconnect>=5.0.0",
    "requests>=2.28.0",
    "pyotp>=2.8.0",
]

[project.scripts]
kite-mcp = "kite_mcp.server:main"
kite-mcp-login = "kite_mcp.cli:login"

[project.urls]
Homepage = "https://github.com/aranjan/kite-mcp"
Issues = "https://github.com/aranjan/kite-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/kite_mcp"]
